adding progress report

--- a/recommender/brewery_recommender_model.ipynb
+++ b/recommender/brewery_recommender_model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recommender Model"
+    "# Brewery Recommender"
    ]
   },
   {
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importing libraries\n",
     "import pandas as pd\n",
     "import sys\n",
     "from scipy import sparse\n",
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,21 +283,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "pivot = df.pivot_table(index='beer_name', columns='review_profilename', \n",
     "                       values=['review_overall'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pivot = []"
    ]
   },
   {
