adding progress report

--- a/eda/eda_beer_data.ipynb
+++ b/eda/eda_beer_data.ipynb
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -610,6 +610,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>brewery_name</th>\n",
        "      <th>review_overall</th>\n",
        "      <th>review_profilename</th>\n",
        "      <th>beer_name</th>\n",
@@ -618,30 +619,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
+       "      <td>Caldera Brewing Company</td>\n",
        "      <td>3.0</td>\n",
        "      <td>oline73</td>\n",
        "      <td>Caldera Ginger Beer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
+       "      <td>Caldera Brewing Company</td>\n",
        "      <td>3.5</td>\n",
        "      <td>Reidrover</td>\n",
        "      <td>Caldera Ginger Beer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
+       "      <td>Caldera Brewing Company</td>\n",
        "      <td>3.0</td>\n",
        "      <td>alpinebryant</td>\n",
        "      <td>Caldera Ginger Beer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
+       "      <td>Caldera Brewing Company</td>\n",
        "      <td>4.0</td>\n",
        "      <td>LordAdmNelson</td>\n",
        "      <td>Caldera Ginger Beer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
+       "      <td>Caldera Brewing Company</td>\n",
        "      <td>4.5</td>\n",
        "      <td>augustgarage</td>\n",
        "      <td>Caldera Ginger Beer</td>\n",
@@ -651,34 +657,40 @@
        "</div>"
       ],
       "text/plain": [
-       "   review_overall review_profilename            beer_name\n",
-       "5             3.0            oline73  Caldera Ginger Beer\n",
-       "6             3.5          Reidrover  Caldera Ginger Beer\n",
-       "7             3.0       alpinebryant  Caldera Ginger Beer\n",
-       "8             4.0      LordAdmNelson  Caldera Ginger Beer\n",
-       "9             4.5       augustgarage  Caldera Ginger Beer"
+       "              brewery_name  review_overall review_profilename  \\\n",
+       "5  Caldera Brewing Company             3.0            oline73   \n",
+       "6  Caldera Brewing Company             3.5          Reidrover   \n",
+       "7  Caldera Brewing Company             3.0       alpinebryant   \n",
+       "8  Caldera Brewing Company             4.0      LordAdmNelson   \n",
+       "9  Caldera Brewing Company             4.5       augustgarage   \n",
+       "\n",
+       "             beer_name  \n",
+       "5  Caldera Ginger Beer  \n",
+       "6  Caldera Ginger Beer  \n",
+       "7  Caldera Ginger Beer  \n",
+       "8  Caldera Ginger Beer  \n",
+       "9  Caldera Ginger Beer  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# dropping unecessary columns for the recommender model to save memory\n",
-    "df_col_drop = df.drop(columns=['brewery_id', 'review_time', 'review_aroma', 'review_appearance', 'brewery_name', \n",
+    "df_col_drop = df.drop(columns=['brewery_id', 'review_time', 'review_aroma', 'review_appearance', \n",
     "                               'beer_style', 'review_palate', 'review_taste', 'beer_abv', 'beer_beerid'])\n",
     "df_col_drop.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# saving both dataframes to csvs\n",
-    "df.to_csv('../data/beer_reviews_no_ones.csv', index=False)\n",
+    "# saving both shortend dataframe to a csv\n",
     "df_col_drop.to_csv('../data/beer_reviews_col_drop.csv', index=False)"
    ]
   }
