started flask app

--- a/recommender/brewery_recommender_model.ipynb
+++ b/recommender/brewery_recommender_model.ipynb
@@ -9,7 +9,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_nums(int_list):\n",
+    "    return pd.Series(int_list).value_counts(ascending=True).index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_nums([1,1,1,2,22,2,22,3,4,4,5,5,5,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def smallest_numlest_num(n):\n",
+    "    check = 0\n",
+    "    num = 0\n",
+    "    divs = list(range(1, n+1))\n",
+    "    while check == 0:\n",
+    "        num += n\n",
+    "        for div in divs:\n",
+    "            if num % div == 0:\n",
+    "                check = 1\n",
+    "                continue\n",
+    "            else:\n",
+    "                check = 0\n",
+    "                break\n",
+    "    return num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "232792560"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smallest_num(19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +195,7 @@
        "4  Caldera Ginger Beer  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,10 +208,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3min 18s, sys: 2min 26s, total: 5min 44s\n",
+      "Wall time: 6min 30s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "# using a pivot table to create my recommender model\n",
     "pivot = df.pivot_table(index='beer_name', columns='review_profilename', \n",
     "                       values=['review_overall'])\n",
@@ -147,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -169,9 +260,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 36.5 ms, sys: 289 ms, total: 326 ms\n",
+      "Wall time: 738 ms\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -188,19 +287,20 @@
        "Name: \"400\" Ale, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "%%time\n",
     "# making sure the recommender works for 1 beer first\n",
     "recommender_df['\\\"400\\\" Ale'].sort_values()[1:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +373,7 @@
     "                sim_beers += 1\n",
     "                \n",
     "        if 2 <= sim_beers:\n",
-    "            if np.mean(score) < 0.5:\n",
+    "            if np.mean(score) < 0.75:\n",
     "                best_breweries[brewery] = (np.mean(score), 'number of similar beers: ', sim_beers)\n",
     "            else:\n",
     "                continue\n",
@@ -288,15 +388,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.58 s, sys: 314 ms, total: 1.89 s\n",
-      "Wall time: 1.95 s\n"
+      "CPU times: user 4.79 s, sys: 959 ms, total: 5.75 s\n",
+      "Wall time: 5.9 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('Brasseurs Du Nord Inc.',\n",
+       "  (0.4507354381162824, 'number of similar beers: ', 2)),\n",
+       " ('AleSmith Brewing Company',\n",
+       "  (0.4739980689222205, 'number of similar beers: ', 2))]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "sorting_brewery_scores(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.41 s, sys: 11.5 ms, total: 1.42 s\n",
+      "Wall time: 1.42 s\n"
      ]
     },
     {
@@ -306,27 +438,27 @@
        "  (0.4739980689222205, 'number of similar beers: ', 2))]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "sorting_brewery_scores(4)"
+    "sorting_brewery_scores(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.4 s, sys: 3.15 s, total: 20.5 s\n",
-      "Wall time: 21.5 s\n"
+      "CPU times: user 23.5 s, sys: 4.44 s, total: 27.9 s\n",
+      "Wall time: 28.8 s\n"
      ]
     },
     {
@@ -339,40 +471,7 @@
        "  (0.4507354381162824, 'number of similar beers: ', 2))]"
       ]
      },
-     "execution_count": 135,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "sorting_brewery_scores(50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 26.5 s, sys: 5.47 s, total: 32 s\n",
-      "Wall time: 36.6 s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('Browarmia Królewkska',\n",
-       "  (0.11641194017073209, 'number of similar beers: ', 2)),\n",
-       " ('Bierhalle', (0.23023686415065453, 'number of similar beers: ', 2)),\n",
-       " ('Brasseurs Du Nord Inc.',\n",
-       "  (0.4507354381162824, 'number of similar beers: ', 2))]"
-      ]
-     },
-     "execution_count": 133,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,15 +483,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 55s, sys: 23.4 s, total: 2min 18s\n",
-      "Wall time: 2min 33s\n"
+      "CPU times: user 1min 43s, sys: 31.6 s, total: 2min 14s\n",
+      "Wall time: 2min 44s\n"
      ]
     },
     {
@@ -405,7 +504,7 @@
        " ('Bierhalle', (0.23023686415065453, 'number of similar beers: ', 2))]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
