--- a/recommender/brewery_recommender_model.ipynb
+++ b/recommender/brewery_recommender_model.ipynb
@@ -9,88 +9,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "def freq_counter(int_list):\n",
+    "    count = 1\n",
+    "    num_dict = {}\n",
+    "    sort_list = sorted(int_list)\n",
+    "    for i in range(1, len(sort_list)):\n",
+    "        if sort_list[i] == sort_list[i-1]:\n",
+    "            count += 1\n",
+    "            if i == len(sort_list) - 1:\n",
+    "                num_dict[str(sort_list[i])] = count\n",
+    "        else:\n",
+    "            num_dict[str(sort_list[i-1])] = count\n",
+    "            count = 1\n",
+    "    smallest = min(num_dict.values())\n",
+    "    for key, value in num_dict.items():\n",
+    "        if value == smallest:\n",
+    "            return int(key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def count_nums(int_list):\n",
-    "    return pd.Series(int_list).value_counts(ascending=True).index[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "8"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "count_nums([1,1,1,2,22,2,22,3,4,4,5,5,5,5])"
+    "freq_counter([1,1, 1,22,22, 22, 8,8, 3, 4, 3,4,3,4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def smallest_numlest_num(n):\n",
-    "    check = 0\n",
-    "    num = 0\n",
-    "    divs = list(range(1, n+1))\n",
-    "    while check == 0:\n",
-    "        num += n\n",
-    "        for div in divs:\n",
-    "            if num % div == 0:\n",
-    "                check = 1\n",
-    "                continue\n",
-    "            else:\n",
-    "                check = 0\n",
-    "                break\n",
-    "    return num"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "232792560"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "smallest_num(19)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -141,35 +104,35 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Caldera Brewing Company</td>\n",
        "      <td>3.0</td>\n",
        "      <td>oline73</td>\n",
        "      <td>Caldera Ginger Beer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>Caldera Brewing Company</td>\n",
        "      <td>3.5</td>\n",
        "      <td>Reidrover</td>\n",
        "      <td>Caldera Ginger Beer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>Caldera Brewing Company</td>\n",
        "      <td>3.0</td>\n",
        "      <td>alpinebryant</td>\n",
        "      <td>Caldera Ginger Beer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>Caldera Brewing Company</td>\n",
        "      <td>4.0</td>\n",
        "      <td>LordAdmNelson</td>\n",
        "      <td>Caldera Ginger Beer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>Caldera Brewing Company</td>\n",
        "      <td>4.5</td>\n",
        "      <td>augustgarage</td>\n",
@@ -195,7 +158,7 @@
        "4  Caldera Ginger Beer  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,67 +171,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
+    "\n",
+    "engine = create_engine('sqlite://', echo=False)\n",
+    "\n",
+    "# df = pd.read_csv('../data/beer_reviews_col_drop.csv').head()\n",
+    "\n",
+    "df.to_sql('beer_test', con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 3min 18s, sys: 2min 26s, total: 5min 44s\n",
-      "Wall time: 6min 30s\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['brewery_name', 'review_overall', 'review_profilename', 'beer_name'], dtype='object')"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3288, '90 Minute IPA'),\n",
+       " (3126, 'India Pale Ale'),\n",
+       " (3097, 'Old Rasputin Russian Imperial Stout'),\n",
+       " (2986, 'Sierra Nevada Celebration Ale'),\n",
+       " (2726, 'Two Hearted Ale'),\n",
+       " (2702, 'Stone Ruination IPA'),\n",
+       " (2697, 'Arrogant Bastard Ale'),\n",
+       " (2577, 'Sierra Nevada Pale Ale'),\n",
+       " (2573, 'Stone IPA (India Pale Ale)'),\n",
+       " (2527, 'Pliny The Elder')]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engine.execute(\"SELECT COUNT(beer_name), beer_name FROM beer_test GROUP BY beer_name ORDER BY COUNT(beer_name) DESC LIMIT 10\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# using a pivot table to create my recommender model\n",
     "pivot = df.pivot_table(index='beer_name', columns='review_profilename', \n",
-    "                       values=['review_overall'])\n",
-    "\n",
-    "pivot_sparse = sparse.csr_matrix(pivot.fillna(0))\n",
-    "recommender = pairwise_distances(pivot_sparse, metric='cosine')\n",
-    "recommender_df = pd.DataFrame(recommender, index=pivot.index, columns=pivot.index)\n",
-    "\n",
-    "# clearing everything I don't need for the model to save memory\n",
-    "pivot = []\n",
-    "recommender = []\n",
-    "pivot_sparse = []"
+    "                       values=['review_overall'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 37895 entries, \"100\" to Ω-naught (Omeganaught)\n",
-      "Columns: 37895 entries, \"100\" to Ω-naught (Omeganaught)\n",
-      "dtypes: float64(37895)\n",
-      "memory usage: 10.7+ GB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# HOLY COW!!! the recommender takes up a lot of memory so it will slow down my function...\n",
-    "recommender_df.info()"
+    "pivot_sparse = sparse.csr_matrix(pivot.fillna(0))\n",
+    "recommender = pairwise_distances(pivot_sparse, metric='cosine')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recommender_df = pd.DataFrame(recommender, index=pivot.index, columns=pivot.index)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 36.5 ms, sys: 289 ms, total: 326 ms\n",
-      "Wall time: 738 ms\n"
+      "Wall time: 59.8 ms\n"
      ]
     },
     {
@@ -287,7 +292,7 @@
        "Name: \"400\" Ale, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,34 +393,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 4.79 s, sys: 959 ms, total: 5.75 s\n",
-      "Wall time: 5.9 s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('Brasseurs Du Nord Inc.',\n",
-       "  (0.4507354381162824, 'number of similar beers: ', 2)),\n",
-       " ('AleSmith Brewing Company',\n",
-       "  (0.4739980689222205, 'number of similar beers: ', 2))]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
-    "sorting_brewery_scores(20)"
+    "str(sorting_brewery_scores(5))"
    ]
   },
   {
@@ -1906,7 +1889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
