added some printout stuff to model

--- a/recommender/brewery_recommender_model.ipynb
+++ b/recommender/brewery_recommender_model.ipynb
@@ -104,35 +104,35 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Caldera Brewing Company</td>\n",
        "      <td>3.0</td>\n",
        "      <td>oline73</td>\n",
        "      <td>Caldera Ginger Beer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Caldera Brewing Company</td>\n",
        "      <td>3.5</td>\n",
        "      <td>Reidrover</td>\n",
        "      <td>Caldera Ginger Beer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Caldera Brewing Company</td>\n",
        "      <td>3.0</td>\n",
        "      <td>alpinebryant</td>\n",
        "      <td>Caldera Ginger Beer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Caldera Brewing Company</td>\n",
        "      <td>4.0</td>\n",
        "      <td>LordAdmNelson</td>\n",
        "      <td>Caldera Ginger Beer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Caldera Brewing Company</td>\n",
        "      <td>4.5</td>\n",
        "      <td>augustgarage</td>\n",
@@ -236,44 +236,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# using a pivot table to create my recommender model\n",
     "pivot = df.pivot_table(index='beer_name', columns='review_profilename', \n",
-    "                       values=['review_overall'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                       values=['review_overall'])\n",
     "pivot_sparse = sparse.csr_matrix(pivot.fillna(0))\n",
-    "recommender = pairwise_distances(pivot_sparse, metric='cosine')"
+    "recommender = pairwise_distances(pivot_sparse, metric='cosine')\n",
+    "recommender_df = pd.DataFrame(recommender, index=pivot.index, columns=pivot.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "recommender_df = pd.DataFrame(recommender, index=pivot.index, columns=pivot.index)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 59.8 ms\n"
+      "CPU times: user 38.6 ms, sys: 138 ms, total: 177 ms\n",
+      "Wall time: 227 ms\n"
      ]
     },
     {
@@ -292,7 +277,7 @@
        "Name: \"400\" Ale, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,57 +356,70 @@
     "def sorting_brewery_scores(n_beers):\n",
     "    rand_user = random_beer_sample(n_beers)\n",
     "    best_breweries = {}\n",
+    "    check = 0\n",
     "    for brewery, score in brewery_recommender(rand_user).items():\n",
     "        sim_beers = 0\n",
     "        for i in score:\n",
     "            if i < 0.5:\n",
     "                sim_beers += 1\n",
     "                \n",
-    "        if 2 <= sim_beers:\n",
-    "            if np.mean(score) < 0.75:\n",
-    "                best_breweries[brewery] = (np.mean(score), 'number of similar beers: ', sim_beers)\n",
-    "            else:\n",
-    "                continue\n",
+    "#         if 2 <= sim_beers:\n",
+    "        best_breweries[brewery] = (np.mean(score), 'number of similar beers: ', sim_beers)\n",
+    "#         else:\n",
+    "#             continue\n",
     "        \n",
     "    sorted_best_breweries = (sorted(best_breweries.items(), key = \n",
     "                 lambda kv:(kv[1], kv[0])))\n",
     "    if len(sorted_best_breweries) > 3:\n",
     "        sorted_best_breweries = sorted_best_breweries[:3]\n",
+    "    if sorted_best_breweries[0][1][0] > 0.5:\n",
+    "        sorted_best_breweries = sorted_best_breweries[0][0]\n",
+    "    else:\n",
+    "        sorted_best_breweries = sorted_best_breweries\n",
     "    \n",
     "    return sorted_best_breweries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Coronado Brewing Company'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%time\n",
-    "str(sorting_brewery_scores(5))"
+    "sorting_brewery_scores(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.41 s, sys: 11.5 ms, total: 1.42 s\n",
-      "Wall time: 1.42 s\n"
+      "CPU times: user 1.37 s, sys: 7.38 ms, total: 1.38 s\n",
+      "Wall time: 1.38 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[('AleSmith Brewing Company',\n",
-       "  (0.4739980689222205, 'number of similar beers: ', 2))]"
+       "'Coronado Brewing Company'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,35 +431,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 23.5 s, sys: 4.44 s, total: 27.9 s\n",
-      "Wall time: 28.8 s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('Browarmia Królewkska',\n",
-       "  (0.11641194017073209, 'number of similar beers: ', 2)),\n",
-       " ('Bierhalle', (0.23023686415065453, 'number of similar beers: ', 2)),\n",
-       " ('Brasseurs Du Nord Inc.',\n",
-       "  (0.4507354381162824, 'number of similar beers: ', 2))]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
-    "sorting_brewery_scores(100)"
+    "sorting_brewery_scores(50)"
    ]
   },
   {
@@ -1889,7 +1864,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
