changed min similarity score of breweries

--- a/recommender/brewery_recommender_model.ipynb
+++ b/recommender/brewery_recommender_model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Brewery Recommender"
+    "# Brewery Recommender: A bunch of tests"
    ]
   },
   {
