--- a/recommender/brewery_recommender_model.ipynb
+++ b/recommender/brewery_recommender_model.ipynb
@@ -9,51 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def freq_counter(int_list):\n",
-    "    count = 1\n",
-    "    num_dict = {}\n",
-    "    sort_list = sorted(int_list)\n",
-    "    for i in range(1, len(sort_list)):\n",
-    "        if sort_list[i] == sort_list[i-1]:\n",
-    "            count += 1\n",
-    "            if i == len(sort_list) - 1:\n",
-    "                num_dict[str(sort_list[i])] = count\n",
-    "        else:\n",
-    "            num_dict[str(sort_list[i-1])] = count\n",
-    "            count = 1\n",
-    "    smallest = min(num_dict.values())\n",
-    "    for key, value in num_dict.items():\n",
-    "        if value == smallest:\n",
-    "            return int(key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "freq_counter([1,1, 1,22,22, 22, 8,8, 3, 4, 3,4,3,4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +114,7 @@
        "4  Caldera Ginger Beer  "
       ]
      },
-     "execution_count": 457,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,8 +160,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     }
    },
    "outputs": [
